Fixed: wflow-commons, wflow-core - Upgrade to Spring 6.1, Spring Security 6.3, Hibernate 6.6, Ehcache 3, Apache Felix 7.0 and Jakarta EE 10 @9.0-SNAPSHOT